work on shop list

--- a/templates/shop/quick_view.html
+++ b/templates/shop/quick_view.html
@@ -15,6 +15,7 @@
                 <div class="shop-detail" >
                     <div class="row" >
                         <div class="col-12 col-lg-6" >
+                            <script src="{% static 'assets/jquery/jquery.min.js' %}" ></script >
                             <div class="shop-detail_img" >
                                 <button class="round-icon-btn" id="zoom-btn" ><i class="icon_zoom-in_alt" ></i ></button >
                                 <div class="big-img" >
