--- a/templates/shop/shop_cart.html
+++ b/templates/shop/shop_cart.html
@@ -11,6 +11,7 @@
         <meta name="keywords"
               content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique" >
         <meta name="author" content="MARTECH | Deer Creative Theme" >
+
     </head >
     <body >
     <div id="main" >
@@ -122,7 +123,7 @@
                 <div class="row" >
                     <div class="col-12 col-sm-8" >
                         <div class="product-table" >
-                            <table class="table table-responsive" style="height: 440px;overflow-y: scroll" >
+                            <table class="table table-responsive" style="height: 485px;overflow-y: scroll" >
                                 <colgroup >
                                     <col span="1" style="width: 15%" >
                                     <col span="1" style="width: 30%" >
@@ -133,12 +134,12 @@
                                 </colgroup >
                                 <thead >
                                 <tr >
-                                    <th class="product-iamge" scope="col" >Image</th >
-                                    <th class="product-name" scope="col" >Product name</th >
-                                    <th class="product-price" scope="col" >Price</th >
-                                    <th class="product-quantity" scope="col" >Quantity</th >
-                                    <th class="product-total" scope="col" >Total</th >
-                                    <th class="product-clear" scope="col" >
+                                    <th class="product-iamge" scope="col" style="color: #636363;">Image</th >
+                                    <th class="product-name" scope="col" style="color: #636363;">Product name</th >
+                                    <th class="product-price" scope="col" style="color: #636363;">Price</th >
+                                    <th class="product-quantity" scope="col"style="color: #636363;" >Quantity</th >
+                                    <th class="product-total" scope="col" style="color: #636363;">Total</th >
+                                    <th class="product-clear" scope="col" style="color: #636363;">
                                         <button class="no-round-btn" ><i class="icon_close" ></i ></button >
                                     </th >
                                 </tr >
@@ -150,7 +151,7 @@
                                             <div class="img-wrapper" style="height: 100px;width: 120px; padding: 5px;" ><img
                                                     src=" {{ order_item.item.images.all.0.image.url }} " alt=" product image " ></div >
                                         </td >
-                                        <td class="product-name" >{{ order_item.item.title }}</td >
+                                        <td class="product-name" style="color: #636363;">{{ order_item.item.title }}</td >
                                         <td class="product-price" >{{ order_item.item.itemdetails.get_discounted_price|stringformat:".2f" }} Tk</td >
                                         <td class="product-quantity" >
                                             <a href="{% url 'shop:remove-single-item-from-cart' order_item.item.slug %}" ><i
@@ -161,7 +162,7 @@
                                         </td >
                                         <td class="product-total" >{{ order_item.get_total_discount_item_price|stringformat:".2f" }} Tk
                                             {% if order_item.item.itemdetails.discount_offer > 0 %}
-                                                <br ><span class="badge badge-primary" >Saved {{ order_item.get_amount_saved|stringformat:".2f" }}</span >
+                                                <br ><span class="badge badge-primary" style="font-size: 10px;">Saved {{ order_item.get_amount_saved|stringformat:".2f" }}</span >
                                             {% endif %}
                                         </td >
                                         <td class="product-clear" >
