nav-foot and cart functionality updated

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -15,9 +15,9 @@
 <body >
 {% block body %}
     {% load i18n %}
-    {% load account socialaccount %}
-    {% load socialaccount %}
-    {% providers_media_js %}
+{#    {% load account socialaccount %}#}
+{#    {% load socialaccount %}#}
+{#    {% providers_media_js %}#}
     {% load crispy_forms_tags %}
     <div id="main" >
         <div class="ogami-breadcrumb" >
