--- a/templates/shop/shop_detail.html
+++ b/templates/shop/shop_detail.html
@@ -16,7 +16,7 @@
     <body >
     <div id="main" >
         <header class="coffee-2" >
-            <div class="navigation-filter" >
+            <div class="navigation-filter" style="margin-top: 65px" >
                 <div class="container" >
                     <div class="row" >
                         <div class="col-12 col-md-12 col-lg-12 col-xl-12 order-1 order-md-2" >
