--- a/templates/master.html
+++ b/templates/master.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/scroll.css' %}" >
     <link rel="stylesheet" href="{% static 'assets/css/icomoon.css' %}" >
     <link rel="stylesheet" href="{% static 'assets/css/jquery.fancybox.min.css' %}" >
-    <link rel="shortcut icon" href="{% static 'assets/images/shortcut_logo.png' %}" >
+{#    <link rel="shortcut icon" href="{% static 'assets/images/shortcut_logo.png' %}" >#}
     {#    <link rel="stylesheet" href="{% static 'assets/css/adjusted_style.css' %}" >#}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" >
@@ -37,45 +37,6 @@
     <style >
         .product .product-name {
             font-size: 16px;
-        }
-    </style >
-    <style id="multilevelnav" >
-        @media (min-width: 992px) {
-            .dropdown-menu .dropdown-toggle:after {
-                border-top: .3em solid transparent;
-                border-right: 0;
-                border-bottom: .3em solid transparent;
-                border-left: .3em solid;
-            }
-
-            .dropdown-menu .dropdown-menu {
-                margin-left: 0;
-                margin-right: 0;
-            }
-
-            .dropdown-menu li {
-                position: relative;
-            }
-
-            .nav-item .submenu {
-                display: none;
-                position: absolute;
-                left: 100%;
-                top: -7px;
-            }
-
-            .nav-item .submenu-left {
-                right: 100%;
-                left: auto;
-            }
-
-            .dropdown-menu > li:hover {
-                background-color: #f1f1f1
-            }
-
-            .dropdown-menu > li:hover > .submenu {
-                display: block;
-            }
         }
     </style >
 </head >
@@ -112,6 +73,55 @@
 
 {#                           <!-- Trigger the modal with a button -->#}
 {#<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#quickViewModal">Open Modal</button>#}
+<!-- =================================== Sidebar  JS ====================== -->
+{#<script type="text/javascript" >#}
+{#    $(document).ready(function () {#}
+{#        var token = '{{csrf_token}}';#}
+{#        var itemtxt = ''#}
+{#        $.ajax({#}
+{#            url: '/cart-item-view/',#}
+{#            type: 'POST',#}
+{#            data: {csrfmiddlewaretoken: '{{ csrf_token }}',},#}
+{#            success: function (data) {#}
+{#                console.log(data);#}
+                {#cart = JSON.parse(data);#}
+                {#items=data[0].fields;#}
+{#                console.log(data.id);#}
+{#                for (item in data.items) {#}
+{#                    x = data.items[item]#}
+{#                    console.log(x.item.title);#}
+{#                    itemtxt += "<div class=\"row justify-content-center px-0  py-2\" style=\"padding-left: 20px !important;\" >\#}
+{#                                    <div class=\"col-md-2\" > \#}
+{#                                        <div class=\"sidebar_image\" >\#}
+{#                                            <img src=\"\" alt=\"\" >\#}
+{#                                        </div >\#}
+{#                                    </div >\#}
+{#                                    <div class=\"col-md-5\" >\#}
+{#                                        <div class=\"selected_product\" >\#}
+{#                                            <p id=\"product_name\" name=\"cartitemname\" >\#}
+{#                                                " + x.item.title + "\#}
+{#                                                <small >325/500gm</small >\#}
+{#                                            </p >\#}
+{#                                            <p id=\"quantitty\" style=\"margin: -3px 0px !important;\" ><span >Total :</span > 3</p >\#}
+{#                                        </div >\#}
+{#                                    </div >\#}
+{#                                    <div class=\"col-md-5\" >\#}
+{#                                        <div class=\"prduct_price\" >\#}
+{#                                            <p id=\"product_price\" >\#}
+{#                                                <span >৳</span >" + x.item.price + "\#}
+{#                                            </p >\#}
+{#                                        </div >\#}
+{#                                    </div >\#}
+{#                                </div >\#}
+{#                                <div class=\"close_add_product\" onclick=\"closeAddProduct()\" >x</div >"#}
+{##}
+{#                }#}
+{#                $("#cartitems").append(itemtxt);#}
+{#            }#}
+{#        });#}
+{#    });#}
+{#</script >#}
+<!-- =================================== Sidebar  Part End ====================== -->
 
 {% block quick_view %}
 <!-- Modal -->
@@ -242,41 +252,41 @@
     </div >
 {% endblock %}
 {% block multilevelnav %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" >
-            <span class="navbar-toggler-icon" ></span >
-        </button >
-        <div class="collapse navbar-collapse" id="main_nav" >
-            <ul class="navbar-nav" >
-                <li class="nav-item" ><a class="nav-link" href="#" > First level 1 </a ></li >
-                <li class="nav-item" ><a class="nav-link" href="#" > First level 2 </a ></li >
-                <li class="nav-item dropdown" >
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" > First level 3 </a >
-                    <ul class="dropdown-menu" >
-                        <li ><a class="dropdown-item" href="#" > Second level 1 </a ></li >
-                        <li ><a class="dropdown-item" href="#" > Second level 2 &raquo </a >
-                            <ul class="submenu dropdown-menu" >
-                                <li ><a class="dropdown-item" href="" > Third level 1</a ></li >
-                                <li ><a class="dropdown-item" href="" > Third level 2</a ></li >
-                                <li ><a class="dropdown-item" href="" > Third level 3 &raquo </a >
-                                    <ul class="submenu dropdown-menu" >
-                                        <li ><a class="dropdown-item" href="" > Fourth level 1</a ></li >
-                                        <li ><a class="dropdown-item" href="" > Fourth level 2</a ></li >
-                                    </ul >
-                                </li >
-                                <li ><a class="dropdown-item" href="" > Second level 4</a ></li >
-                                <li ><a class="dropdown-item" href="" > Second level 5</a ></li >
-                            </ul >
-                        </li >
-                        <li ><a class="dropdown-item" href="#" > Dropdown item 3 </a ></li >
-                        <li ><a class="dropdown-item" href="#" > Dropdown item 4 </a >
-                    </ul >
-                </li >
-                <li class="nav-item" ><a class="nav-link" href="#" > First level 1 </a ></li >
-                <li class="nav-item" ><a class="nav-link" href="#" > First level 2 </a ></li >
-            </ul >
-        </div > <!-- navbar-collapse.// -->
-    </nav >
+    {#    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >#}
+    {#        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" >#}
+    {#            <span class="navbar-toggler-icon" ></span >#}
+    {#        </button >#}
+    {#        <div class="collapse navbar-collapse" id="main_nav" >#}
+    {#            <ul class="navbar-nav" >#}
+    {#                <li class="nav-item" ><a class="nav-link" href="#" > First level 1 </a ></li >#}
+    {#                <li class="nav-item" ><a class="nav-link" href="#" > First level 2 </a ></li >#}
+    {#                <li class="nav-item dropdown" >#}
+    {#                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" > First level 3 </a >#}
+    {#                    <ul class="dropdown-menu" >#}
+    {#                        <li ><a class="dropdown-item" href="#" > Second level 1 </a ></li >#}
+    {#                        <li ><a class="dropdown-item" href="#" > Second level 2 &raquo </a >#}
+    {#                            <ul class="submenu dropdown-menu" >#}
+    {#                                <li ><a class="dropdown-item" href="" > Third level 1</a ></li >#}
+    {#                                <li ><a class="dropdown-item" href="" > Third level 2</a ></li >#}
+    {#                                <li ><a class="dropdown-item" href="" > Third level 3 &raquo </a >#}
+    {#                                    <ul class="submenu dropdown-menu" >#}
+    {#                                        <li ><a class="dropdown-item" href="" > Fourth level 1</a ></li >#}
+    {#                                        <li ><a class="dropdown-item" href="" > Fourth level 2</a ></li >#}
+    {#                                    </ul >#}
+    {#                                </li >#}
+    {#                                <li ><a class="dropdown-item" href="" > Second level 4</a ></li >#}
+    {#                                <li ><a class="dropdown-item" href="" > Second level 5</a ></li >#}
+    {#                            </ul >#}
+    {#                        </li >#}
+    {#                        <li ><a class="dropdown-item" href="#" > Dropdown item 3 </a ></li >#}
+    {#                        <li ><a class="dropdown-item" href="#" > Dropdown item 4 </a >#}
+    {#                    </ul >#}
+    {#                </li >#}
+    {#                <li class="nav-item" ><a class="nav-link" href="#" > First level 1 </a ></li >#}
+    {#                <li class="nav-item" ><a class="nav-link" href="#" > First level 2 </a ></li >#}
+    {#            </ul >#}
+    {#        </div > <!-- navbar-collapse.// -->#}
+    {#    </nav >#}
     <script type="text/javascript" >
         // Prevent closing from click inside dropdown
         $(document).on('click', '.dropdown-menu', function (e) {
