--- a/templates/shop/shop_cart.html
+++ b/templates/shop/shop_cart.html
@@ -11,12 +11,11 @@
         <meta name="keywords"
               content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique" >
         <meta name="author" content="MARTECH | Deer Creative Theme" >
-
     </head >
     <body >
     <div id="main" >
         <header class="coffee-2" >
-            <div class="navigation-filter" >
+            <div class="navigation-filter" style="margin-top: 65px">
                 <div class="container" >
                     <div class="row" >
                         <div class="col-12 col-md-4 col-lg-4 col-xl-3 order-2 order-md-1" >
@@ -26,17 +25,21 @@
                                             class="arrow_carrot-down" ></i ></span ></div >
                                 <div class="department-dropdown-menu" >
                                     <ul >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-1" ></i >Fresh Meat</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-2" ></i >Vegetables</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-3" ></i >Fruit & Nut Gifts</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-4" ></i >Fresh Berries</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-5" ></i >Ocean Foods</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" ><i class="icon-6" ></i >Butter & Eggs</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" ><i class="icon-7" ></i >Fastfood</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-8" ></i >Fresh Onion</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-9" ></i >Papayaya & Crisps</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" ><i class="icon-10" ></i >Oatmeal</a ></li >
-                                        <li ><a href="shop_grid%2blist_3col.html" > <i class="icon-11" ></i >Fresh Bananas</a ></li >
+                                        <!-- Nested div for requirement -->
+                                        <div class="vertical-nav" >
+                                            {% for cat in categories %}
+                                                <li ><a href="" ><i
+                                                        class="icon-{{ forloop.counter }}" ></i >{{ cat.category_name }}</a >
+                                                    <i class="fa fa-chevron-right float-right" aria-hidden="true" ></i >
+                                                    <ul class="sub-menu" >
+                                                        {% for subcat in cat.subcategory_set.all %}
+                                                            <li ><a href="{{ subcat.get_absolute_url }}" > <i
+                                                                    class="icon-2" ></i >{{ subcat.sub_category_name }}</a ></li >
+                                                        {% endfor %}
+                                                    </ul >
+                                                </li >
+                                            {% endfor %}
+                                        </div >
                                     </ul >
                                 </div >
                             </div >
@@ -134,12 +137,12 @@
                                 </colgroup >
                                 <thead >
                                 <tr >
-                                    <th class="product-iamge" scope="col" style="color: #636363;">Image</th >
-                                    <th class="product-name" scope="col" style="color: #636363;">Product name</th >
-                                    <th class="product-price" scope="col" style="color: #636363;">Price</th >
-                                    <th class="product-quantity" scope="col"style="color: #636363;" >Quantity</th >
-                                    <th class="product-total" scope="col" style="color: #636363;">Total</th >
-                                    <th class="product-clear" scope="col" style="color: #636363;">
+                                    <th class="product-iamge" scope="col" style="color: #636363;" >Image</th >
+                                    <th class="product-name" scope="col" style="color: #636363;" >Product name</th >
+                                    <th class="product-price" scope="col" style="color: #636363;" >Price</th >
+                                    <th class="product-quantity" scope="col" style="color: #636363;" >Quantity</th >
+                                    <th class="product-total" scope="col" style="color: #636363;" >Total</th >
+                                    <th class="product-clear" scope="col" style="color: #636363;" >
                                         <button class="no-round-btn" ><i class="icon_close" ></i ></button >
                                     </th >
                                 </tr >
@@ -151,7 +154,7 @@
                                             <div class="img-wrapper" style="height: 100px;width: 120px; padding: 5px;" ><img
                                                     src=" {{ order_item.item.images.all.0.image.url }} " alt=" product image " ></div >
                                         </td >
-                                        <td class="product-name" style="color: #636363;">{{ order_item.item.title }}</td >
+                                        <td class="product-name" style="color: #636363;" >{{ order_item.item.title }}</td >
                                         <td class="product-price" >{{ order_item.item.itemdetails.get_discounted_price|stringformat:".2f" }} Tk</td >
                                         <td class="product-quantity" >
                                             <a href="{% url 'shop:remove-single-item-from-cart' order_item.item.slug %}" ><i
@@ -162,11 +165,13 @@
                                         </td >
                                         <td class="product-total" >{{ order_item.get_total_discount_item_price|stringformat:".2f" }} Tk
                                             {% if order_item.item.itemdetails.discount_offer > 0 %}
-                                                <br ><span class="badge badge-primary" style="font-size: 10px;">Saved {{ order_item.get_amount_saved|stringformat:".2f" }}</span >
+                                                <br ><span class="badge badge-primary"
+                                                           style="font-size: 10px;" >Saved {{ order_item.get_amount_saved|stringformat:".2f" }}</span >
                                             {% endif %}
                                         </td >
                                         <td class="product-clear" >
-                                            <button class="no-round-btn" onclick="location.href='{{ order_item.item.get_remove_from_cart_url }}'"><i class="fas fa-trash" ></i ></button >
+                                            <button class="no-round-btn" onclick="location.href='{{ order_item.item.get_remove_from_cart_url }}'" ><i
+                                                    class="fas fa-trash" ></i ></button >
                                         </td >
                                     </tr >
                                 {% endfor %}
@@ -209,7 +214,9 @@
                                         </tbody >
                                     </table >
                                     <div class="checkout-method" >
-                                        <button onclick="location.href='{% url 'shop:checkout' %}'" class="normal-btn" style="margin: 0px" >Proceed to Checkout</button >
+                                        <button onclick="location.href='{% url 'shop:checkout' %}'" class="normal-btn" style="margin: 0px" >Proceed to
+                                                                                                                                            Checkout
+                                        </button >
                                     </div >
                                 </div >
                             </div >
