--- a/templates/shop/shop_order_complete.html
+++ b/templates/shop/shop_order_complete.html
@@ -133,7 +133,7 @@
                             <div id="headerimage" ></div >
                             <div id="invoice" class="effect2" >
                                 <div id="invoice-top" style="" >
-                                    <div class="logo" ><img src="{% static 'assets/images/logo.png' %}" alt="" ></div >
+                                    <div class="logo" ><img src="{% static 'assets/images/logo.png' %}" alt=""  style="width: 200px !important;" ></div >
                                     {#                                    <div class="info" >#}
                                     {#                                        <h2 >Michael Truong</h2 >#}
                                     {#                                        <p > hello@michaeltruong.ca </br>#}
