--- a/static/assets/css/adjusted_style.css
+++ b/static/assets/css/adjusted_style.css
@@ -83,9 +83,8 @@
 *************************************/
 
 .container{
-	max-width: 1366px;
+	max-width: 1366px !important;
 }
-
 /************************************
 	Product Promotion
 *************************************/
