--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -106,13 +106,13 @@
         <!-- =================================== Float Part End ====================== -->
         <!-- =================================== Sidebar  Part start====================== -->
         <div id="add_cart_sidebar" class="px-1" style="margin-top: 57px; ">
-            <div class="closeSidebar" onclick="closeSidebar()" ><i class="fa fa-chevron-right" aria-hidden="true" ></i >
+            <div class="closeSidebar" onclick="closeSidebar()" style="vertical-align: middle">Close</i>
             </div >
             <div class="specialCode" >
                 <button class="special_code" onclick="clickCode()" > <span ><i class="fa fa-chevron-circle-up" aria-hidden="true" ></i >
                </span > Have a special code?
                 </button >
-                <div class="token_form px-2" >
+                <div class="token_form px-2" id = "hiddenform">
                     <form >
                         <div class="row justify-content-center text-center px-2" >
                             <div class="col-md-8 col-sm-8 py-2" >
@@ -136,8 +136,8 @@
             <!-- ===================================== Sidebar Inner row Start=============================== -->
             <div class="row justify-content-center text-center" >
                 <div class="col-md-12" >
-                    <div class="header_selected_product" >
-                        <h3 style="font-size: 13px"><i class="fa fa-shopping-cart" aria-hidden="true" ></i ><span >{{ request.user|cart_item_count }}</span > Items Selected</h3 st >
+                    <div class="header_selected_product text-left" >
+                        <h3 style="font-size: 13px; padding-left: 18px"><i class="fa fa-shopping-cart" aria-hidden="true" ></i ><span >{{ request.user|cart_item_count }}</span > Items Selected</h3 >
                     </div >
                 </div >
             </div >
@@ -167,7 +167,7 @@
                             <div class="col-md-5" >
                                 <div class="prduct_price" >
                                     <p id="product_price" style="margin-bottom: 0px !important; margin-top: 7px" >
-                                        <span >৳</span >350
+                                        <span >৳</span >{{  item.get_total_discount_item_price|stringformat:".1f" }}
                                     </p >
                                     <div class="close_add_product" onclick="closeAddProduct()" >
                                         <a href="{{ item.item.get_remove_from_cart_url }}" >
