--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -2,6 +2,128 @@
 {% block nav %}
     {% load static %}
     {% load cart_template_tags %}
+    <style >
+
+        .flashbtn {
+            text-align: center;
+            margin-bottom: -10px;
+            width: 150px;
+            height: 35px;
+            background: linear-gradient(to left top, rgb(252, 243, 227) 50%, rgba(250, 234, 209, 0.95) 50%);
+            border-style: none;
+            color: #fff;
+            font-size: 15px !important;
+            letter-spacing: 3px;
+            font-family: 'Lato';
+            font-weight: 600;
+            outline: none;
+            cursor: pointer;
+            position: relative;
+            padding: 0px;
+            overflow: hidden;
+            transition: all .5s;
+            box-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
+        }
+
+        .flashbtn span {
+            position: absolute;
+            display: block;
+        }
+
+        .flashbtn span:nth-child(1) {
+            height: 3px;
+            width: 200px;
+            top: 0px;
+            left: -200px;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0), #cb241b);
+            border-top-right-radius: 1px;
+            border-bottom-right-radius: 1px;
+            animation: span1 2s linear infinite;
+            animation-delay: 1s;
+        }
+
+        @keyframes span1 {
+            0% {
+                left: -200px
+            }
+            100% {
+                left: 200px;
+            }
+        }
+
+        .flashbtn span:nth-child(2) {
+            height: 70px;
+            width: 3px;
+            top: -70px;
+            right: 0px;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #cb241b);
+            border-bottom-left-radius: 1px;
+            border-bottom-right-radius: 1px;
+            animation: span2 2s linear infinite;
+            animation-delay: 2s;
+        }
+
+        @keyframes span2 {
+            0% {
+                top: -70px;
+            }
+            100% {
+                top: 70px;
+            }
+        }
+
+        .flashbtn span:nth-child(3) {
+            height: 3px;
+            width: 200px;
+            right: -200px;
+            bottom: 0px;
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), #cb241b);
+            border-top-left-radius: 1px;
+            border-bottom-left-radius: 1px;
+            animation: span3 2s linear infinite;
+            animation-delay: 3s;
+        }
+
+        @keyframes span3 {
+            0% {
+                right: -200px;
+            }
+            100% {
+                right: 200px;
+            }
+        }
+
+        .flashbtn span:nth-child(4) {
+            height: 70px;
+            width: 3px;
+            bottom: -70px;
+            left: 0px;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0), #cb241b);
+            border-top-right-radius: 1px;
+            border-top-left-radius: 1px;
+            animation: span4 2s linear infinite;
+            animation-delay: 4s;
+        }
+
+        @keyframes span4 {
+            0% {
+                bottom: -70px;
+            }
+            100% {
+                bottom: 70px;
+            }
+        }
+
+        .flashbtn:hover {
+            transition: all .5s;
+            transform: rotate(-3deg) scale(1.1);
+            box-shadow: 0px 3px 5px rgba(0, 0, 0, .4);
+        }
+
+        .flashbtn:hover span {
+            animation-play-state: paused;
+        }
+    </style >
     <header class="coffee-2" >
         <nav class="navigation d-flex align-items-center fixed-top" style="padding: 10px;  background-color: whitesmoke" >
             <div class="container" >
@@ -10,7 +132,7 @@
                     </div >
                     <div class="col-7" >
                         <div class="navgition-menu d-flex align-items-center justify-content-center" >
-                            <ul class="mb-0" >
+                            <ul class="mb-0" style="margin-left: 200px">
                                 <li class="toggleable" ><a class="menu-item active" href="{% url 'shop:home' %}" >Home</a ></li >
                                 {#                                <li class="toggleable" ><a class="menu-item" href="shop_grid%2blist_3col.html" >Shop</a >#}
                                 {#                                    <ul class="sub-menu shop d-flex" >#}
@@ -36,28 +158,28 @@
                                 {#                                        </div >#}
                                 {#                                    </ul >#}
                                 {#                                </li >#}
-                                <li class="toggleable" ><a class="menu-item" href="blog_list_sidebar.html" >Blog</a >
+                                <li class="toggleable" ><a class="menu-item" href="" >Blog</a >
                                     <ul class="sub-menu" >
                                         <li >Coming Soon</li >
                                     </ul >
                                 </li >
-                                <li class="toggleable" ><a class="menu-item" href="about_us.html" >About us</a >
+                                <li class="toggleable" ><a class="menu-item" href="" >About us</a >
                                     <ul class="sub-menu" >
                                         <li >Coming Soon</li >
                                     </ul >
                                 </li >
-                                <li class="toggleable" ><a class="menu-item" href="{% url 'shop:cattle-shop' %}" >ঈদ স্পেশাল</a ></li >
+                                <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >ঈদ স্পেশাল<span></span><span></span><span></span><span></span></a ></li >
                             </ul >
                         </div >
                     </div >
                     <div class="col-3" >
                         {% if user.is_authenticated %}
                             <div class="product-function d-flex align-items-center justify-content-end" >
-                                <div id="wishlist" ><a class="function-icon icon_heart_alt" href="#" ><span style="margin-left: 0px" >0</span ></a >
+                                <div id="wishlist" ><a class="function-icon icon_heart_alt" href="#" style="color:#cb241b; "><span style="margin-left: 2px; font-size: 12px" > 0</span ></a >
                                 </div >
                                 <div id="cart" ><a class="function-icon icon_bag_alt"
-                                                   href="{% url 'shop:order-summary' %}" ><span
-                                        style="margin-left: 0px" >{{ request.user|cart_item_count }}</span ></a >
+                                                   style="color:#cb241b; " href="{% url 'shop:order-summary' %}" ><span
+                                        style="margin-left: 0px;font-size: 12px" >{{ request.user|cart_item_count }}</span ></a >
                                 </div >
                                 &nbsp;&nbsp;&nbsp;&nbsp;<div ><a class="function-icon " href="/accounts/logout" >Log out</a ></div >
                             </div >
@@ -189,15 +311,15 @@
                 <div class="col-12 col-sm-12 col-md-4 text-sm-center text-md-left" >
                     <div class="footer-logo" ><img src="{% static 'assets/images/logo.png' %}" alt="" ></div >
                     <div class="footer-contact" >
-                        <p style="margin-bottom: 0px !important;">Address: Dhanmondi, Dhaka</p >
-                        <p style="margin-bottom: 0px !important;">Phone: +8801762850108</p >
-                        <p style="margin-bottom: 0px !important;">Email: contact@somikoron.com</p >
+                        <p style="margin-bottom: 0px !important;" >Address: Dhanmondi, Dhaka</p >
+                        <p style="margin-bottom: 0px !important;" >Phone: +8801762850108</p >
+                        <p style="margin-bottom: 0px !important;" >Email: contact@somikoron.com</p >
                     </div >
                     <div class="footer-social" >
                         <a class="round-icon-btn coffee" href="https://www.facebook.com/somikoron/" ><i class="fab fa-facebook-f" > </i ></a >
-                        <a class="round-icon-btn coffee" href="#" disabled=""><i class="fab fa-twitter" ></i ></a >
-                        <a class="round-icon-btn coffee" href="#" disabled=""><i class="fab fa-invision" > </i ></a >
-                        <a class="round-icon-btn coffee" href="#" disabled=""><i class="fab fa-pinterest-p" ></i ></a >
+                        <a class="round-icon-btn coffee" href="#" disabled="" ><i class="fab fa-twitter" ></i ></a >
+                        <a class="round-icon-btn coffee" href="#" disabled="" ><i class="fab fa-invision" > </i ></a >
+                        <a class="round-icon-btn coffee" href="#" disabled="" ><i class="fab fa-pinterest-p" ></i ></a >
                     </div >
                 </div >
                 <div class="col-md-8" >
